# learning_web_assembly_rust

./: README.md
wasm-game-of-life/: Cargo.toml  LICENSE_MIT
wasm-game-of-life/src/: lib.rs
wasm-game-of-life/www/: index.html  index.js  webpack.config.js
