[package]
authors = ["Brooks Patton <brooks@brookzerker.com>"]
edition = "2018"
name = "wasm-game-of-life"
version = "0.1.0"

[dependencies]
wasm-bindgen = "0.2.63"
rand = { version="0.7.3", features= ["wasm-bindgen"] }

[dependencies.console_error_panic_hook]
optional = true
version = "0.1.6"

[dependencies.wee_alloc]
optional = true
version = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile]
[profile.release]
opt-level = "s"
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

