[package]
authors = ["Brooks Patton <brooks@brookzerker.com>"] # This is a comment
edition = "2018"
name = "wasm-game-of-life"
version = "0.1.0"

[dependencies]
# required for wasm projects
wasm-bindgen = "0.2.63"

# These are crates that are compatible with wasm projects
rand = { version="0.7.3", features= ["wasm-bindgen"] }

[lib]
# https://doc.rust-lang.org/reference/linkage.html
# These output library files that are required by the linker in wasm-pack
crate-type = ["cdylib", "rlib"]

[profile.release]
# Optimize for code size
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
# By default wasm-pack builds for release mode, this will turn off optimizations for release mode
# We won't get very much out of it, so we won't miss the release optimizations when building for real
# Some optimizations are still happening
wasm-opt = false